# youtui

./: LICENSE.txt  README.md  pyproject.toml
src/youtui/: __about__.py  entry_points.py  todo.txt  youtui.py
src/youtui/downloader/: downloader.py
src/youtui/widgets/: yt_input.py
tests/: __init__.py
