[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtui"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Yadav106", email = "sahil.jp.yadav@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["textual==0.71.0", "yt-dlp==2024.7.2"]

[project.urls]
Documentation = "https://github.com/Yadav106/youtui#readme"
Issues = "https://github.com/Yadav106/youtui/issues"
Source = "https://github.com/Yadav106/youtui"

[tool.hatch.version]
path = "src/youtui/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/youtui tests}"

[tool.coverage.run]
source_pkgs = ["youtui", "tests"]
branch = true
parallel = true
omit = [
  "src/youtui/__about__.py",
]

[tool.coverage.paths]
youtui = ["src/youtui", "*/youtui/src/youtui"]
tests = ["tests", "*/youtui/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
youtui = "youtui.entry_points:youtui"
